@@ -22,6 +22,7 @@ it from source control: http://www.mediawiki.org/wiki/Download_from_SVN
 
 === New features in 1.12 ===
 * Add a warning for non-descriptive filenames at Special:Upload
+* (bug 11243) Show thumbnail on image description page previews
 
 === Bug fixes in 1.12 ===
 
